After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 676443 - clue bar in Downloads looks bad
clue bar in Downloads looks bad
Status: RESOLVED FIXED
Product: gnome-user-share
Classification: Core
Component: general
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-user-share maintainers
gnome-user-share maintainers
Depends on:
Blocks:
 
 
Reported: 2012-05-20 21:16 UTC by William Jon McCann
Modified: 2012-06-01 14:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot (54.93 KB, image/png)
2012-05-20 21:16 UTC, William Jon McCann
  Details
share-bar: make it a GtkInfoBar subclass (6.96 KB, patch)
2012-05-21 18:12 UTC, Cosimo Cecchi
committed Details | Review
all: misc cleanups (8.02 KB, patch)
2012-05-21 18:12 UTC, Cosimo Cecchi
needs-work Details | Review
all: don't use deprecated GDK methods (1.24 KB, patch)
2012-05-21 18:12 UTC, Cosimo Cecchi
committed Details | Review

Description William Jon McCann 2012-05-20 21:16:42 UTC
Created attachment 214519 [details]
screenshot

The clue bar thingy in Downloads doesn't look like the media one and just looks bad.
Comment 1 Cosimo Cecchi 2012-05-21 13:02:54 UTC
-> gnome-user-share

That bar is provided by the gnome-user-share Nautilus extension
Comment 2 Cosimo Cecchi 2012-05-21 18:12:36 UTC
Created attachment 214579 [details] [review]
share-bar: make it a GtkInfoBar subclass

Instead of a GtkBox. This fixes the different appearance of the bar from
the rest of the stock Nautilus bars.
Comment 3 Cosimo Cecchi 2012-05-21 18:12:40 UTC
Created attachment 214580 [details] [review]
all: misc cleanups

Remove useless/obsolete code
Comment 4 Cosimo Cecchi 2012-05-21 18:12:43 UTC
Created attachment 214581 [details] [review]
all: don't use deprecated GDK methods
Comment 5 Bastien Nocera 2012-05-21 18:19:08 UTC
Review of attachment 214579 [details] [review]:

Looks good.
Comment 6 Bastien Nocera 2012-05-21 18:20:21 UTC
Review of attachment 214580 [details] [review]:

Could you please split those patches? Makes it hard to see what's happening here.

::: src/user_share.c
@@ -491,3 @@
 		return 1;
 
-	x_fd = ConnectionNumber (xdisplay);

At least this is wrong. We want a connection to the X display so we die when the X server goes away.
Comment 7 Bastien Nocera 2012-05-21 18:20:46 UTC
Review of attachment 214581 [details] [review]:

Looks good.
Comment 8 Cosimo Cecchi 2012-05-21 18:45:58 UTC
Comment on attachment 214579 [details] [review]
share-bar: make it a GtkInfoBar subclass

Attachment 214579 [details] pushed as 1cfba24 - share-bar: make it a GtkInfoBar subclass
Comment 9 Cosimo Cecchi 2012-05-21 18:47:09 UTC
(In reply to comment #6)

> Could you please split those patches? Makes it hard to see what's happening
> here.

Okay, I will open a new bug for those cleanups.
Comment 10 Cosimo Cecchi 2012-06-01 14:47:54 UTC
Comment on attachment 214581 [details] [review]
all: don't use deprecated GDK methods

Attachment 214581 [details] pushed as 7b51e6c - all: don't use deprecated GDK methods