share-bar: make it a GtkInfoBar subclass

Instead of a GtkBox. This fixes the different appearance of the bar from
the rest of the stock Nautilus bars.

https://bugzilla.gnome.org/show_bug.cgi?id=676443